# lqg-ftl-metric-engineering

./: .gitignore  CadQuery_Status_Report.md  DEVELOPMENT_FRAMEWORK_SUMMARY.md  ENERGY_OPTIMIZATION_REPORT.json  MISSION_ACCOMPLISHED_SUMMARY.md  OPTIMIZED_SHIP_DESIGN_SUMMARY.md  README.md  SHIP_DECK_SPECIFICATIONS.md  SHIP_HULL_GEOMETRY_FRAMEWORK.md  TOKAMAK_SYSTEM_SUMMARY.md  UQ-TODO-RESOLVED-CONSOLIDATED.ndjson  UQ-TODO-RESOLVED.ndjson  UQ_RESOLUTION_COMPLETE.md  UQ_TRACKING_RESOLUTION.md  VnV-RESOLVED.ndjson  VnV-TODO.ndjson  alpha_leveraging_framework_report.txt  cadquery_diagnostics.py  comprehensive_validation.py  corolla_vs_warp_comparison.py  cross_repository_energy_integration.py  cross_scale_physics_validation_report.txt  debug_tokamak.step  demo_earth_proxima_trajectory.ndjson  demo_flight_path_visualization.py  demo_optimized_trajectory.ndjson  demo_ship_hull_geometry.py  energy_loss_evaluation.json  energy_optimization_analysis.json  excitement_assessment.py  extended_9999c_analysis.py  field_concentration_analysis.json  field_concentration_system.py  final_excitement_level.py  fuel_injection_controller.py  geometric_energy_optimizer.py  h_infinity_robustness_validation_report.txt  integrated_test_results_20250716_144958.json  integrated_test_results_20250716_152540.json  integrated_test_results_20250716_153139.json  (+32 more)
.github/: copilot-instructions.md
analysis/: LQR-1_advanced_analysis.json  LQR-1_optimization_report.json  README.md  advanced_reactor_analysis.py  breakthrough_analysis.py  coordinate_velocity_energy_mapping.csv  energy_comparison_analysis.py  (+16 more)
(+205 files in other folders)
